# ai-flow-chart

./: .env.example  .gitignore  README.md  docker-compose.yml  开发者指南.md  开发者指南.txt  开发计划.md  项目开发计划.txt
.claude/: settings.local.json
backend/: ai_flow.db  alembic.ini  pyproject.toml  test_parser.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: ai.py  auth.py  flow.py  parse.py
backend/app/core/: redis.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/models/: flow.py  user.py
backend/app/schemas/: ai.py  flow.py  parse.py  user.py
backend/app/services/: ai_proxy.py  puml_parser.py
backend/app/services/ai_adapters/: base.py  claude.py  openai.py
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/AIInputBox/: index.tsx
frontend/src/components/AuthPage/: index.tsx
frontend/src/components/FlowCanvas/: edges.tsx  index.tsx  nodes.tsx
frontend/src/lib/: api.ts  export.ts  graphToPuml.ts  layout.ts
frontend/src/stores/: auth.ts  index.ts
